# Boundforge-engine

./: CMakeLists.txt  CMakePresets.json  build.sh  layout.md
shaders/: basic.frag  basic.vert  screen_centered.vert
shaders/compute/: tracer.comp
src/: Shader.cpp  Shader.hpp  main.cpp  shader.cpp  shader.h
src/entities/: StaticMeshEntity.hpp
src/physics/: IPhysicsProvider.hpp  PhysicsEntity.hpp
src/scene/: Entity.hpp  Scene.cpp  Scene.hpp
